apps/base/sftpgo/routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sftpgo-webdav-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.196
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dav.sftpgo.akop.ro`)
      services:
        - kind: Service
          name: sftpgo-webdavport
          namespace: sftpgo
          port: 10080
  tls:
    secretName: storage-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sftpgo-admin-route
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.akop.ro
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dash.sftpgo.akop.ro`)
      services:
        - kind: Service
          name: sftpgo
          namespace: sftpgo
          port: 2221
  tls:
    secretName: storage-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sftpgo-sftp-route
  namespace: traefik
spec:
  entryPoints:
    - sftp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sftpgo-sftpport
          port: 2022
          namespace: sftpgo
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sftpgo-ftp-route
  namespace: traefik
spec:
  entryPoints:
    - ftp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sftpgo-ftpport
          port: 2121
          namespace: sftpgo
---
